--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
 		"mockery/mockery": ">=0.9.0",
 		"illuminate/cache": ">=4.1.0",
 		"illuminate/console": ">=4.1.0"
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "0.1-dev"
+		}
 	}
 }
